mmap 반쪽짜리 구현 완료, 20/141 Fail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "interrupt.h": "c",
-        "thread.h": "c"
+        "thread.h": "c",
+        "vm.h": "c",
+        "vaddr.h": "c",
+        "mmu.h": "c"
     }
 }
